@@ -6,9 +6,10 @@
 	* apps/app_externalivr.c: Add a space that fixes building on older versions of gcc
 	* many files: Add doxygen updates to categorize modules into groups. Convert a lot of comments over to doxygen style. Add some text giving a basic overview of channels.
 	* apps/app_chanisavail.c: Make priority jumping optional
-	* apps/app_db.c: Add an exit status variable and make priority jumping optional
+	* apps/app_db.c: Add an exit status variable, and make priority jumping optional
 	* apps/app_enumlookup.c: Make priority jumping optional
 	* apps/app_groupcount.c: Add an exit status variable, make priority jumping optional, and use new args parsing macros
+	* apps/app_image.c: Add an exit status variable, make priority jumping optional, and use new args parsing macros
 
 2005-11-05  Kevin P. Fleming  <kpfleming@digium.com>
 
